--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "codecs": "^2.0.0",
+    "inspect-custom-symbol": "^1.1.1",
     "sodium-universal": "^2.0.0"
   },
   "devDependencies": {
