--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "picofeed",
-  "version": "3.4.2",
+  "version": "4.0.0",
   "description": "Microscopic Secure Feed occupying a single buffer",
+  "type": "module",
   "main": "index.js",
   "files": [
     "lib",
@@ -9,26 +10,31 @@
     "index.js"
   ],
   "scripts": {
-    "test": "tape test.js",
-    "debug": "node inspect $(npm bin)/tape test.js",
+    "test": "node test.js",
+    "debug": "node inspect test.js",
+    "cov": "c8 node test.js",
     "lint": "standard",
-    "prepublishOnly": "standard && npm test"
+    "prepublishOnly": "standard --fix && npm test && cov --check-coverage --100"
   },
   "dependencies": {
-    "inspect-custom-symbol": "^1.1.1",
-    "sodium-universal": "^3.0.2"
+    "@noble/curves": "^1.0.0",
+    "@noble/hashes": "^1.3.0"
   },
   "devDependencies": {
-    "standard": "^16.0.1",
-    "tape": "^5.0.1"
+    "brittle": "^3.2.1",
+    "c8": "^7.13.0",
+    "standard": "^17.0.0"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/telamon/picofeed.git"
   },
   "keywords": [
+    "space efficient",
     "secure",
     "feed",
+    "transport",
+    "decentralized",
     "p2p",
     "block",
     "chain"
