--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "@noble/curves": "^1.0.0",
-    "@noble/hashes": "^1.3.0"
+    "@noble/hashes": "^1.3.0",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "brittle": "^3.2.1",
