--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "dependencies": {
     "@noble/curves": "^1.0.0",
-    "@noble/hashes": "^1.3.0",
-    "typescript": "^5.0.4"
+    "@noble/hashes": "^1.3.0"
   },
   "devDependencies": {
     "brittle": "^3.2.1",
