--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "test": "node test.js",
     "debug": "node inspect test.js",
     "cov": "c8 --check-coverage --lines=100 node test.js",
+    "size": "esbuild --bundle --format=esm index.js --outfile=/dev/null --analyze",
     "lint": "standard",
     "prepublishOnly": "standard --fix && npm run cov"
   },
   "dependencies": {
-    "@noble/curves": "^1.0.0",
+    "@noble/curves": "^1.2.0",
     "@noble/hashes": "^1.3.0"
   },
   "devDependencies": {
     "brittle": "^3.2.1",
-    "c8": "^7.13.0",
+    "c8": "^8.0.1",
+    "esbuild": "^0.19.5",
     "standard": "^17.0.0"
   },
   "repository": {
