--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "cov": "c8 --check-coverage --lines=100 node test.js",
     "size": "esbuild --bundle --minify --format=esm index.js --outfile=/dev/null --analyze",
     "lint": "standard",
-    "types": "tsc --allowJs --checkJs --declaration --emitDeclarationOnly --lib es2022,dom --target es2022 --outFile index.js --moduleResolution nodenext index.js",
+    "types": "tsc --allowJs --checkJs --declaration --emitDeclarationOnly --lib es2022,dom --target es2022 --moduleResolution nodenext  --module nodenext index.js",
     "prepublishOnly": "standard --fix && npm run cov && npm run types"
   },
   "dependencies": {
-    "@noble/curves": "^1.2.0",
-    "@noble/hashes": "^1.3.0"
+    "@noble/curves": "^1.4.2",
+    "@noble/hashes": "^1.4.0"
   },
   "devDependencies": {
-    "brittle": "^3.2.1",
-    "c8": "^8.0.1",
-    "esbuild": "^0.19.5",
+    "brittle": "^3.6.1",
+    "c8": "^10.1.2",
+    "esbuild": "^0.23.0",
     "standard": "^17.0.0"
   },
   "repository": {
@@ -50,5 +50,29 @@
   "bugs": {
     "url": "https://github.com/telamon/picofeed/issues"
   },
-  "homepage": "https://github.com/telamon/picofeed#readme"
+  "homepage": "https://github.com/telamon/picofeed#readme",
+  "resolutions": {
+    "semver": "7.6.3",
+    "find-up": "5.0.0",
+    "locate-path": "6.0.0",
+    "path-exists": "4.0.0",
+    "p-locate": "5.0.0",
+    "p-limit": "3.1.0",
+    "glob": "10.4.5",
+    "minimatch": "9.0.5",
+    "string-width": "5.1.2",
+    "strip-ansi": "7.1.0",
+    "wrap-ansi": "8.1.0",
+    "emoji-regex": "9.2.2",
+    "ansi-regex": "6.0.1",
+    "ansi-styles": "6.2.1",
+    "brace-expansion": "2.0.1",
+    "debug": "4.3.5",
+    "doctrine": "3.0.0",
+    "eslint-visitor-keys": "2.1.0",
+    "ms": "2.1.3",
+    "type-fest": "0.3.1",
+    "resolve": "2.0.0-next.5",
+    "eslint-utils": "3.0.0"
+  }
 }
