--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "transport",
     "decentralized",
     "p2p",
-    "block",
-    "chain"
+    "block"
   ],
   "author": {
     "name": "Tony Ivanov",
@@ -50,29 +49,5 @@
   "bugs": {
     "url": "https://github.com/telamon/picofeed/issues"
   },
-  "homepage": "https://github.com/telamon/picofeed#readme",
-  "resolutions": {
-    "semver": "7.6.3",
-    "find-up": "5.0.0",
-    "locate-path": "6.0.0",
-    "path-exists": "4.0.0",
-    "p-locate": "5.0.0",
-    "p-limit": "3.1.0",
-    "glob": "10.4.5",
-    "minimatch": "9.0.5",
-    "string-width": "5.1.2",
-    "strip-ansi": "7.1.0",
-    "wrap-ansi": "8.1.0",
-    "emoji-regex": "9.2.2",
-    "ansi-regex": "6.0.1",
-    "ansi-styles": "6.2.1",
-    "brace-expansion": "2.0.1",
-    "debug": "4.3.5",
-    "doctrine": "3.0.0",
-    "eslint-visitor-keys": "2.1.0",
-    "ms": "2.1.3",
-    "type-fest": "0.3.1",
-    "resolve": "2.0.0-next.5",
-    "eslint-utils": "3.0.0"
-  }
+  "homepage": "https://github.com/telamon/picofeed#readme"
 }
