--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cov": "c8 --check-coverage --lines=100 node test.js",
     "size": "esbuild --bundle --minify --format=esm index.js --outfile=/dev/null --analyze",
     "lint": "standard",
-    "types": "tsc  --emitDeclarationOnly --allowJs --skipLibCheck --checkJs --declaration --removeComments --lib es2022 --target es2022 --moduleResolution nodenext --module nodenext --outFile index index.js",
+    "types": "tsc  --emitDeclarationOnly --allowJs --skipLibCheck --checkJs --declaration --removeComments --lib es2022 --target es2022 --moduleResolution nodenext --module nodenext index.js",
     "prepublishOnly": "standard --fix && npm run cov && npm run types"
   },
   "types": "index.d.ts",
